# CMakeWinDeployQt

./: .gitignore  LICENSE  README.md  WinDeployQt.cmake
example/: CMakeLists.txt  main.cpp
